--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta id="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Attendance Calc</title>
+    <title>Document</title>
    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
@@ -21,6 +21,7 @@
     <input type="text" id="num2" placeholder="Total classes">
     <input type="text" id="num3" placeholder="Target attendance">
     <button type="submit" id="submit">calculate</button>
+    <footer>Version 1.1</footer>
     <script src="./index.js"></script>
     
 </body>
